[package]
name = "blaseball-observer-rs"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.5.1"
argh = "0.1.3"
serde_json = "1.0.59"
serde = { version = "1.0.59", features = ["derive"] }
anyhow = "1.0.33"
